Fixing z-index styles

--- a/src/render/assets/css/launcher.css
+++ b/src/render/assets/css/launcher.css
@@ -692,7 +692,7 @@ h5 {
     bottom: 0;
     background: none!important;
     pointer-events: none;
-    z-index: 1002;
+    z-index: 3005;
 }
 
 
